# zimports

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  test_file.py  tests.py  tox.ini  zimports.py
.github/workflows/: release.yml  run-test.yml
.github/workflows/scripts/: update_version.py
test_files/: comment_inside_imports.expected.py  comment_inside_imports.py  cp1252.expected.py  cp1252.py  delayed_import_typing.expected.py  delayed_import_typing.py  dupe_imports.expected.py  dupe_imports.py  issue_34.expected.py  issue_34.py  maintain_formatting.expected.py  maintain_formatting.py  maintain_formatting_multiline.expected.py  multi_imports.expected.py  multi_imports.py  multi_imports_long_lines.expected.py  noqa_codes.expected.py  noqa_codes.py  nosort.expected.py  nosort.py  sqla_test_file.expected.py  sqla_test_file.py  star_imports.cryptography.expected.py  star_imports.expected.py  star_imports_two.expected.py  tricky_parens.expected.py  tricky_parens.no_unused.py  type_checking1.expected.py  type_checking1.py  type_checking2.expected.py  type_checking2.py  type_checking3.expected.py  type_checking3.no_unused_types.py  type_checking3.py  type_checking4.py  type_checking5.expected.py  type_checking5.py  type_checking6.expected.py  type_checking6.py  type_ignore.expected.py  (+12 more)
zimports/: __init__.py  cli.py  ventored.py  zimports.py
