[metadata]
name = zimports
version = 0.3.0
description = Yet another import fixing tool
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/sqlalchemyorg/zimports
author = Mike Bayer
author_email = mike_mp@zzzcomputing.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
project_urls =
    Issue Tracker=https://github.com/sqlalchemyorg/zimports/issues

[options]
zip_safe = False
python_requires = >= 3.7
packages = find:
install_requires =
    pyflakes
    flake8-import-order

[options.entry_points]
console_scripts =
    zimports = zimports:main

[options.packages.find]
include=
    zimports*

[tool:pytest]
addopts= --tb native -v -r sfxX --maxfail=25 -p no:warnings -p no:logging
python_files=tests.py


[flake8]
enable-extensions = G
# E203 is due to https://github.com/PyCQA/pycodestyle/issues/373
ignore =
    A003,
    D,
    E203,E305,E711,E712,E721,E722,E741,
    N801,N802,N806,
    RST304,RST303,RST299,RST399,
    W503,W504
exclude = .venv,.git,.tox,dist,doc,*egg,build
import-order-style = google
